# n-gram

./: .coveragerc  .gitignore  Pipfile  pyproject.toml  pytest.ini
source/: 01_code.py  02_code.py  03_code.py  benchmark.py  oop_code.py  performance_code.py  simple_code.py  texto_2.txt  texto_3.txt
source/tests/: test_argv.py  test_oop_code.py  test_performance_code.py  test_simple_code.py
source/utils/: abstract_parser.py  argv.py  modules.py  profile.py
