[tool.poetry]
name = "n-gram"
version = "0.1.0"
description = ""
authors = ["Marcus Vinicus Braga <mvbraga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0 || >3.11.0,<4.0"
ipython = "^8.18.1"
pytest = "^7.4.3"
coverage = "^7.3.2"
scalene = "^1.5.31.1"
pytest-cov = "^4.1.0"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
